Changes to handle web site folder change

--- a/MNU_FILEEXPORT.htm
+++ b/MNU_FILEEXPORT.htm
@@ -12,8 +12,8 @@
 </ul>
 <p><strong>See Also </strong></p>
 <ul>
-<li><a href="/nwc2/help/SUBMNU_FILE.htm">File Menu Commands</a></li>
-<li><a href="/nwc2/help/MNU_FILESAVE.htm">Save Command</a></li>
-<li><a href="/nwc2/help/MNU_FILESAVEALL.htm">Save All Command</a></li>
+<li><a href="SUBMNU_FILE.htm">File Menu Commands</a></li>
+<li><a href="MNU_FILESAVE.htm">Save Command</a></li>
+<li><a href="MNU_FILESAVEALL.htm">Save All Command</a></li>
 </ul>
 </body>
