--- a/MNU_FILEHISTORY.htm
+++ b/MNU_FILEHISTORY.htm
@@ -7,6 +7,6 @@
 <p>The File History commands make it easier to open recent works within <em>NoteWorthy Composer 2</em>. Your most recently edited files are stored in the file history. New and imported files are added to the history after they are given a new name and saved.</p>
 <p><strong>See Also </strong></p>
 <ul>
-<li><a href="/nwc2/help/SUBMNU_FILE.htm">File Menu Commands</a></li>
+<li><a href="SUBMNU_FILE.htm">File Menu Commands</a></li>
 </ul>
 </body>
