--- a/MNU_FILENEW.htm
+++ b/MNU_FILENEW.htm
@@ -3,14 +3,14 @@
 <title>New Command</title>
 </head>
 <body>
-<h2><img src="/nwc2/help/img/new.gif" alt=""> New Command</h2>
+<h2><img src="img/new.gif" alt=""> New Command</h2>
 <p>This command is used to create a new <em>NoteWorthy Composer</em> work. A new file is started by selecting a song template and then pressing OK. The template named <strong><em>&lt;Blank Score&gt;</em></strong> in the <strong>General</strong> tab is a special template that starts a new file from scratch. You can also manually browse for an existing file that should be used as a template for a new work. The notation and lyrics are automatically cleared when using the Browse function.</p>
-<p>Once a new file has been started, you can edit the new song as any other song being edited in the notation editor. The first time you chose to save the new file, the Save As dialog (see <a href="/nwc2/help/MNU_FILESAVEAS.htm">Save As Command</a>) will automatically appear so that you can specify the filename for this new song.</p>
+<p>Once a new file has been started, you can edit the new song as any other song being edited in the notation editor. The first time you chose to save the new file, the Save As dialog (see <a href="MNU_FILESAVEAS.htm">Save As Command</a>) will automatically appear so that you can specify the filename for this new song.</p>
 <p><strong>See Also </strong></p>
 <ul>
-<li><a href="/nwc2/help/SUBMNU_FILE.htm">File Menu Commands</a></li>
-<li><a href="/nwc2/help/MNU_FILEOPEN.htm">Open Command</a></li>
-<li><a href="/nwc2/help/MNU_FILESAVEAS.htm">Save As Command</a></li>
-<li><a href="/nwc2/help/MNU_FILEINFO.htm">Info Command</a></li>
+<li><a href="SUBMNU_FILE.htm">File Menu Commands</a></li>
+<li><a href="MNU_FILEOPEN.htm">Open Command</a></li>
+<li><a href="MNU_FILESAVEAS.htm">Save As Command</a></li>
+<li><a href="MNU_FILEINFO.htm">Info Command</a></li>
 </ul>
 </body>
