--- a/MNU_USERTOOLS.htm
+++ b/MNU_USERTOOLS.htm
@@ -11,11 +11,11 @@
 <p>&nbsp;</p>
 <p><strong>See Also</strong></p>
 <ul>
-<li><a href="/nwc2/help/intro_usertooldev.htm">Introduction to User Tool Development</a></li>
-<li><a href="/nwc2/help/intro_lua_scripting.htm">Lua Scripting</a></li>
+<li><a href="intro_usertooldev.htm">Introduction to User Tool Development</a></li>
+<li><a href="intro_lua_scripting.htm">Lua Scripting</a></li>
 </ul>
 <ul>
-<li><a href="/nwc2/help/SUBMNU_TOOLS.htm">Tools Menu Commands</a></li>
-<li><a href="/nwc2/help/MNU_LASTUSERTOOL.htm">Last User Tool</a></li>
+<li><a href="SUBMNU_TOOLS.htm">Tools Menu Commands</a></li>
+<li><a href="MNU_LASTUSERTOOL.htm">Last User Tool</a></li>
 </ul>
 </body>
