--- a/TAB_STAFFPROPGENERAL.htm
+++ b/TAB_STAFFPROPGENERAL.htm
@@ -22,8 +22,8 @@ If present, the Abbreviated label will be used in all systems after the first. I
 <div class="ctldesc">This option determines what kind of bar line appears at the end of the staff. You can use this to customize the look of the final bar line in the staff.</div>
 <p><strong>See Also </strong></p>
 <ul>
-<li><a href="/nwc2/help/intro_proptab.htm">Introduction to Property Dialog Boxes</a></li>
-<li><a href="/nwc2/help/SUBMNU_TOOLS.htm">Tools Menu Commands</a></li>
-<li><a href="/nwc2/help/SUBMNU_INSERT.htm">Insert Menu Commands</a></li>
+<li><a href="intro_proptab.htm">Introduction to Property Dialog Boxes</a></li>
+<li><a href="SUBMNU_TOOLS.htm">Tools Menu Commands</a></li>
+<li><a href="SUBMNU_INSERT.htm">Insert Menu Commands</a></li>
 </ul>
 </body>
