--- a/intro_usertooldev.htm
+++ b/intro_usertooldev.htm
@@ -47,7 +47,7 @@
 <p><strong>&lt;PROMPT:Please select the smallest note to process?=|Quarter|8th|16th|32nd&gt;</strong><br> This will prompt the user to "<em>Please select the smallest note to process?</em>" and will include a drop down box that includes <strong>Quarter</strong>, <strong>8th</strong>, <strong>16th</strong>, and <strong>32nd</strong>.</p>
 <p><strong>See Also</strong></p>
 <ul>
-<li><a href="/nwc2/help/intro_lua_scripting.htm">Program Customization with Lua</a></li>
-<li><a href="/nwc2/help/MNU_USERTOOLS.htm">User Tool Command<br></a></li>
+<li><a href="intro_lua_scripting.htm">Program Customization with Lua</a></li>
+<li><a href="MNU_USERTOOLS.htm">User Tool Command<br></a></li>
 </ul>
 </body>
