--- a/HELP_ONWHATSNEW.htm
+++ b/HELP_ONWHATSNEW.htm
@@ -5,6 +5,7 @@
 <body>
 <h2>What&rsquo;s New in <em>NoteWorthy Composer</em> Version 2.75a</h2>
 <ul>
+<li>Download option in User Tools interface</li>
 <li>ANSI Text Encoding option for MIDI files (Tools, Options, File)</li>
 <li>Support for <a href="PathExpansions.htm">expandable file/folder path names</a></li>
 <li>Built-in Lua plugin and user tool API reference (Help, Lua API Reference)</li>
