--- a/MNU_EDITLYRICS.htm
+++ b/MNU_EDITLYRICS.htm
@@ -3,7 +3,7 @@
 <title>Lyrics Command</title>
 </head>
 <body>
-<h2><img src="/nwc2/help/img/lyric.gif" alt="" width="26" height="22"> Lyrics Command</h2>
+<h2><img src="img/lyric.gif" alt="" width="26" height="22"> Lyrics Command</h2>
 <p>Lyrics are added to a staff using this command. Each staff can be configured for up to 8 lyric lines, each of which will be automatically aligned to the notes in the staff. You can quickly access the lyric editor dialog, where lyrics are added, by pressing <strong>Ctrl+L</strong> while in the editor. The lyrics are added within the lyric editor dialog using 9 tabbed property sections.</p>
 <h3><strong><span style="text-decoration: underline;">Configuring Lyrics: </span></strong></h3>
 <p>The first property section, the <strong><em>Configuration</em></strong> tab, is used to define the lyric that should be associated with the active staff. A separate tab is then  available for each of the lyric lines in the  staff. You can control how lyric syllables are aligned with notes on the  staff using the align syllable option. You can control where the lyrics are placed vertically in the staff using the placement options.</p>
@@ -38,7 +38,7 @@
 <li><strong><em>two carriage returns <br> </em></strong>Two carriage returns together creates a new paragraph, section, or      verse within the current lyric. Additional carriage returns (greater than      2 in a row) will be ignored by <em>NoteWorthy Composer 2</em>. They will not exist      when the lyric is opened again for edit.</li>
 </ul>
 <p>Use of these separator conventions may become more important in later upgrades that may allow "fake book" arrangements.</p>
-<p>If you want to include one or more spaces into a single syllable (or utterance),    you can use the underscore character ("_") to accomplish this, as    long as you have the "<span style="text-decoration: underline;"><strong>Underscore    shown as space</strong></span>" option enabled. Any underscores in a lyric are displayed    as spaces in the score when this is enabled. Using the underscore, you can have    multiple words or syllables associated with a single note event on the score.    You can also add space onto the front or at the end of a syllable in order to    even out the notation display in the score. You can also use <a href="/nwc2/help/MNU_NTNPROPERTIES.htm">notation    properties</a> to force notes and rests to either attach to a lyric syllable,    or specifically not attach to a lyric syllable.</p>
+<p>If you want to include one or more spaces into a single syllable (or utterance),    you can use the underscore character ("_") to accomplish this, as    long as you have the "<span style="text-decoration: underline;"><strong>Underscore    shown as space</strong></span>" option enabled. Any underscores in a lyric are displayed    as spaces in the score when this is enabled. Using the underscore, you can have    multiple words or syllables associated with a single note event on the score.    You can also add space onto the front or at the end of a syllable in order to    even out the notation display in the score. You can also use <a href="MNU_NTNPROPERTIES.htm">notation    properties</a> to force notes and rests to either attach to a lyric syllable,    or specifically not attach to a lyric syllable.</p>
 <h3><strong><span style="text-decoration: underline;">Lyric Alignment on the Staff: </span></strong></h3>
 <p>When displaying lyrics, each syllable is automatically aligned to the next note in the score. The following rules apply to lyric association to notes in the staff:</p>
 <ol>
@@ -50,7 +50,7 @@
 </ol>
 <h3><strong><span style="text-decoration: underline;">Authoring Hints: </span></strong></h3>
 <p>It does not matter which order you decide to use when composing a song which includes lyrics. You can author the lyrics first, and then begin to place notes in the staff, or you can add the lyric lines after the notes have been placed. Any lyric utterance which occurs beyond the current duration of the staff is retained and will be displayed as soon as new notes are added to the staff.</p>
-<p>If the lyrics are not aligning properly to tied or slurred note groupings, then hit the <strong>F9</strong> key to initiate a refresh of the current score (see <a href="/nwc2/help/MNU_AUDITSCORE.htm">Refresh Score</a>). This should enable the slur groups to re-synchronize and work correctly.</p>
+<p>If the lyrics are not aligning properly to tied or slurred note groupings, then hit the <strong>F9</strong> key to initiate a refresh of the current score (see <a href="MNU_AUDITSCORE.htm">Refresh Score</a>). This should enable the slur groups to re-synchronize and work correctly.</p>
 <p>While in the lyric editor, you can copy a lyric line via the clipboard using standard cut and copy keystrokes. Specifically:</p>
 <ul>
 <li>holding the shift key down will select characters in the lyric</li>
@@ -60,7 +60,7 @@
 </ul>
 <p><strong>See Also </strong></p>
 <ul>
-<li><a href="/nwc2/help/SUBMNU_EDIT.htm">Edit Menu Commands</a></li>
-<li><a href="/nwc2/help/MNU_NTNPROPERTIES.htm">notation properties</a></li>
+<li><a href="SUBMNU_EDIT.htm">Edit Menu Commands</a></li>
+<li><a href="MNU_NTNPROPERTIES.htm">notation properties</a></li>
 </ul>
 </body>
