--- a/HELP_ONWHATSNEW.htm
+++ b/HELP_ONWHATSNEW.htm
@@ -5,11 +5,19 @@
 <body>
 <h2>What&rsquo;s New in <em>NoteWorthy Composer</em> Version 2.75a</h2>
 <ul>
-<li>Download option in User Tools interface</li>
+<li>Expanded range and fractional tenths for stem lengths (Alt+&#8597; in the editor)</li>
+<li>Expanded range and fractional tenths for note spacing (Alt+&#8596; in the editor)</li>
+<li>Expanded range and fractional tenths for accidental spacing (Alt+Shift+&#8596; in the editor)</li>
+<li>New Extra Dot Spacing option enables horizontal spacing control; hide the augmentation by setting this negative</li>
+<li>Finalized Multi-part Augmentation Dot Placement option in Staff Properties</li>
+<li>Position indicator, with leger lines, in the left side active staff frame</li>
+<li>Bar Number Panel now includes an indicator for notes with the Muted property</li>
+<li>Simplified grace note slur placement</li>
 <li>ANSI Text Encoding option for MIDI files (Tools, Options, File)</li>
 <li>Support for <a href="PathExpansions.htm">expandable file/folder path names</a></li>
 <li>Built-in Lua plugin and user tool API reference (Help, Lua API Reference)</li>
-<li>Additions to the object plugin api</li>
+<li>Download option in User Tools interface for forum hosted <b>.nwcut.lua</b> scripts</li>
+<li>Additions to the object plugin api, including support for integrated user tools</li>
 <li>Convert options now built into the main nwc2.exe program</li>
 <li>Detect problems with Unicode filenames that cannot be represented in ANSI</li>
 <li>Fix for a computation anomaly in the object plugin drawing mechanism</li>
