--- a/TAB_STAFFPROPVISUAL.htm
+++ b/TAB_STAFFPROPVISUAL.htm
@@ -24,6 +24,8 @@ Display properties for a staff include: </p>
 </li>
 <li><h4>Color</h4><div class="ctldesc">Each staff can be assigned one of the custom highlight colors. If this is done, the editor will no longer show this staff in active and inactive colors. It will use this color instead. Custom highlight colors can be changed from the Color tab in Tools | Options.</div>
 </li>
+<li><h4>Multi-part Augmentation Dot Placement</h4><div class="ctldesc">When layered, down stem dotted notes on the staff will use lower voice placement for the augmentation dot.</div>
+</li>
 </ul>
 <p>
 <b>See Also </b></p>
