--- a/HELP_ONKEYBOARD.htm
+++ b/HELP_ONKEYBOARD.htm
@@ -77,6 +77,9 @@ h3 {background-color: #E0E0E0;}
 <tr><th><a href="MNU_SHARP.htm">9</a></th>
 <td>Toggles the sharp sign for note entry</td>
 </tr>
+<tr><th><a href="MNU_COURTESYACC.htm">(</a></th>
+<td>Toggles the courtesy indicator for accidentals</td>
+</tr>
 <tr><th><a href="MNU_NOTEACCENT.htm">!</a></th>
 <td>Toggles the accent note attribute</td>
 </tr>
