--- a/IDH_TOOLBARBTNS.htm
+++ b/IDH_TOOLBARBTNS.htm
@@ -48,6 +48,7 @@ The following tool buttons can appear on the tool bars. The tool bars can be cus
 <a href="MNU_SHARP.htm"><img src="img/sharp.gif"></a> Toggles the sharp sign for note entry<br>
 <a href="MNU_DOUBLESHARP.htm"><img src="img/dblsharp.gif"></a> Toggles the double sharp sign for note entry<br>
 <a href="MNU_DOUBLEFLAT.htm"><img src="img/dblflat.gif"></a> Toggles the double flat sign for note entry<br>
+<a href="MNU_COURTESYACC.htm"><img src="img/courtesy.gif"></a> Toggles the courtesy indicator for accidentals<br>
 <a href="MNU_NOTE1.htm"><img src="img/note1.gif"></a> Selects a whole note duration for use during note entry<br>
 <a href="MNU_NOTE2.htm"><img src="img/note2.gif"></a> Selects a half note duration for use during note entry<br>
 <a href="MNU_NOTE4.htm"><img src="img/note4.gif"></a> Selects a quarter note duration for use during note entry<br>
