--- a/SUBMNU_NOTES.htm
+++ b/SUBMNU_NOTES.htm
@@ -39,6 +39,7 @@
 <li><a href="MNU_SHARP.htm">Sharp</a>: Future notes will include a sharp sign</li>
 <li><a href="MNU_DOUBLESHARP.htm">Double Sharp</a>: Future notes will include a double-sharp sign</li>
 <li><a href="MNU_DOUBLEFLAT.htm">Double Flat</a>: Future notes will include a double-flat sign</li>
+<li><a href="MNU_COURTESYACC.htm">Courtesy Accidental</a>: Accidentals will include a courtesy indication</li>
 </ul>
 </li>
 <li><a href="MNU_HAIRPINCRESC.htm">Crescendo</a>: Toggles the crescendo attribute of the selected notes</li>
