--- a/TAB_OPTIONSEDITOR.htm
+++ b/TAB_OPTIONSEDITOR.htm
@@ -9,8 +9,6 @@
 <div class="ctldesc">This enables an automatic check for new program upgrades. If an upgrade is available, an alert will be issued in the notification area.</div>
 <h4>Rt Mouse Sets Insertion Pt</h4>
 <div class="ctldesc">This checkbox is used to control how a click of the right mouse button is treated by the staff notation editor. If you check this box, the editor will re-position the insertion point when you click on the right mouse button. When not check, you must use the left mouse button to first position the insertion point, and then the right mouse button can be used to add notation items. Note that when notation is selected, a right mouse click never re-positions the insertion point, thus leaving the selection present.</div>
-<h4>Smart Insertion Point</h4>
-<div class="ctldesc">This checkbox is used to control how the insertion point is positioned in the score editor. When checked, the insertion point will generally track to the right side of any notes or rests on the staff. When not checked, the insertion point aligns along the transparent vertical grid that aligns all notes and rests in the current score.</div>
 <h4>Ignore Transpose on Midi In</h4>
 <div class="ctldesc">This checkbox controls how incoming MIDI events are converted into notes when the currently active staff is using an instrument with transposition. If disabled, incoming MIDI notes will be added to the staff exactly as they sound on the staff. For example, in order to add a C4 note into a Bb trumpet staff, you would need to press the Bb3 key on the piano, since the trumpet triggers a two semitone transposition to its Bb tuning. When enabled, you can enter notes onto the staff from the piano keyboard, or a remote MIDI device, and the notes will be placed onto the staff without applying the transposition settings of the current instrument. This means that you can enter a C4 note onto the staff by pressing the C4 key on the piano, even if the current instrument is a Bb trumpet (with a transposition of -2).</div>
 <h4>Smart Properties Insert</h4>
@@ -19,6 +17,10 @@
 <p>The <strong>Expression Placement</strong> properties are set by finding a similar item elsewhere in the staff, and then using it as a basis for positioning the new item. If a similar item is not found, the program decides on the placement properties based on reasonable defaults.</p>
 <p>If the properties need to be changed, the new item can be selected after it is entered, and all properties can be adjusted as necessary.</p>
 <p>When disabled, all available properties for new items must be set manually. The properties are initially set to whatever was used the last time this kind of item was added.</p>
+</div>
+<h4>Max Caret Offset Distance</h4>
+<div class="ctldesc">This setting influences the position of the caret when area at the insertion point includes extra note space padding. Positive values move the caret away from the target note just behind (left) of the insertion point. Negative values move the caret position away from the right edge of the insertion point.
+<img style="display:block;" src="img/caret-offset.png" />
 </div>
 <h4>Custom Expression Anchor</h4>
 <div class="ctldesc">This option changes the editor's expression anchor into a custom pointer that indicates the justification origin. The size option indicates the amount of space reserved for the anchor relative to the current zoom level. A size setting of about 1.0 is recommended when using the custom anchor.</div>
