Fix a few typos

--- a/SUBMNU_EDIT.htm
+++ b/SUBMNU_EDIT.htm
@@ -27,7 +27,7 @@ The commands available from the edit menu include: </p>
 <li><a href="MNU_EDITGOTO.htm">Goto</a>: Moves insertion point to the measure you specify</li>
 <li><a href="MNU_EDITLYRICS.htm">Lyrics</a>: Opens the lyric editor dialog for this staff</li>
 <li><a href="MNU_NTNFILTEREDPROP.htm">Filtered Properties</a>: Allows an include/exclude filter to be applied before editing properties</li>
-<li><a href="MNU_OPENPROPERTIES.htm">Properties</a>: Open the propeties editor for the current selection</li>
+<li><a href="MNU_OPENPROPERTIES.htm">Properties</a>: Open the properties editor for the current selection</li>
 </ul>
 </body>
 </html>
