--- a/SUBMNU_TOOLS.htm
+++ b/SUBMNU_TOOLS.htm
@@ -32,7 +32,7 @@
 <li><a href="MNU_TRANSPOSE.htm">Transpose Staff</a>: Transposes the active staff up or down in semitones</li>
 <li><a href="MNU_FORCEACCIDENTALS.htm">Force Accidentals</a>: Forces all notes in active staff to be labeled with an accidental</li>
 <li><a href="MNU_USERTOOLS.htm">User Tool</a>: Used to run your own custom tools/commands on selected notation</li>
-<li><a href="MNU_SHOWUSEROBJECTS.htm">Manage Objects</a>: Used to manage object types and matgching plugin source</li>
+<li><a href="MNU_SHOWUSEROBJECTS.htm">Manage Objects</a>: Used to manage object types and matching plugin source</li>
 <li><a href="MNU_PREFERENCES.htm">Options</a>: Configure <em>NoteWorthy Composer 2</em> application preferences</li>
 </ul>
 </body>
