A few more fixups

--- a/TAB_SNGNOTEPROPERTIES.htm
+++ b/TAB_SNGNOTEPROPERTIES.htm
@@ -28,6 +28,11 @@ in order to have any articulations properly appear near the end of the note stem
 </div>
 </li>
 
+<li><h4>Beam group start</h4>
+<div class="ctldesc">Starts a new group inside a note beam. This has no effect on non-beamed notes.
+</div>
+</li>
+
 <li><h4>Override Stem Length</h4>
 <div class="ctldesc">Use this option to override the default stem length on the selected notes. You can assign a zero length if you want to hide the stem completely.
 </div>
