--- a/HELP_ONWHATSNEW.htm
+++ b/HELP_ONWHATSNEW.htm
@@ -5,6 +5,8 @@
 <body>
 <h2>What&rsquo;s New in <em>NoteWorthy Composer</em> Version 2.75a</h2>
 <ul>
+<li>Beam groups</li>
+<li>Courtesy accidentals</li>
 <li>Expanded range and fractional tenths for stem lengths (Alt+&#8597; in the editor)</li>
 <li>Expanded range and fractional tenths for note spacing (Alt+&#8596; in the editor)</li>
 <li>Expanded range and fractional tenths for accidental spacing (Alt+Shift+&#8596; in the editor)</li>
@@ -12,6 +14,7 @@
 <li>Finalized Multi-part Augmentation Dot Placement option in Staff Properties</li>
 <li>Position indicator, with leger lines, in the left side active staff frame</li>
 <li>Bar Number Panel now includes an indicator for notes with the Muted property</li>
+<li>New control key enabling mouse-over behavior in the editor</li>
 <li>Simplified grace note slur placement</li>
 <li>ANSI Text Encoding option for MIDI files (Tools, Options, File)</li>
 <li>Support for <a href="PathExpansions.htm">expandable file/folder path names</a></li>
@@ -20,7 +23,7 @@
 <li>Additions to the object plugin api, including support for integrated user tools</li>
 <li>Convert options now built into the main nwc2.exe program</li>
 <li>Detect problems with Unicode filenames that cannot be represented in ANSI</li>
-<li>Fix for a computation anomaly in the object plugin drawing mechanism</li>
+<li>Fix for computation anomalies in the object plugin drawing mechanism</li>
 <li>Fix for loading files created/edited by an old NWC version 1 program</li>
 </ul>
 
